<resources>
    <string name="app_name">Z Player</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourite">Favourite</string>
    <string name="playlist">PlayList</string>
    <string name="word_of_music">Word of Music</string>
    <string name="backnavigation">backNavigation</string>
    <string name="textview">TextView</string>
    <string name="paush">paush</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="song_name">Song Name</string>
    <string name="_00_00">00:00</string>
    <string name="playlists">PlayLists</string>
    <string name="total_songs">Total Songs</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="walcome_to_n_world_of_music">Walcome to \n World of Music</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="your_name">Your Name</string>
    <string name="remove_all">Remove All</string>
    <string name="add">Add</string>
    <string name="select_songs">Select Songs</string>
    <string name="set_theme">set Theme</string>
    <string name="sort_by">Sort by</string>
    <string name="version_name_1_0">Version Name: 1.0</string>
</resources>