<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PlaylistDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/cool_pink"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/backnavigation"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/left_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playlistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:layout_marginEnd="50dp"
            android:singleLine="true"
            android:textSize="25sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/cool_pink"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/playlistImage"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:src="@drawable/music_pic"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/playlistDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollbarSize="10dp"
        android:paddingBottom="300dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        android:scrollbarTrackVertical="@drawable/scrollbar_track"
        />

    <!--for buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/addBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/add"
            app:tint="#E91E63" />

        <TextView
            android:id="@+id/addText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"/>


        <ImageButton
            android:id="@+id/removeBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/favourite"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/remove"
            app:tint="#E91E63" />

        <TextView
            android:id="@+id/removeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remove_all"
            android:textSize="20sp"
            android:layout_marginEnd="7dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:icon="@drawable/shuffle"
        app:iconSize="35dp"
        app:iconTint="@color/cool_pink"
        app:strokeWidth="2dp"
        app:strokeColor="@color/cool_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.732"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>