<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="@string/set_theme"
        android:textSize="18sp"
        android:layout_marginTop="2dp"
        android:gravity="center"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:id="@+id/coolPinkTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circule"
            app:tint="@color/cool_pink"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/coolBlueTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circule"
            app:tint="@color/cool_blue"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/coolGreenTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circule"
            app:tint="@color/cool_green"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/purpleTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circule"
            app:tint="@color/purple_588"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/blackTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circule"
            app:tint="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="2dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"/>
        
        <ImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort"
            app:tint="?attr/themeColor"
            android:padding="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="@string/version_name_1_0"
        android:textSize="18sp"
        android:padding="16dp"/>

</LinearLayout>